--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,7 @@ a:hover {
 
 .navbar-b {
   transition: all .5s ease-in-out;
-  background-color: rgba(0, 0, 0, 0.8);
+  /*background-color: rgba(0, 0, 0, 0.8);*/
   padding-top: 1.563rem;
   padding-bottom: 1.563rem;
 }
