--- a/css/style.css
+++ b/css/style.css
@@ -1328,3 +1328,11 @@ footer .credits a {
   display: block;
   padding: 1.5rem 1rem;
 }
+
+.value{
+font-size: 2.3rem !important;
+}
+
+.prevenda{
+  color: #da3006;
+}
